-Using transactions and pipelines on save